--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -12,7 +12,11 @@
     <header>
       <nav>
         <ul>
-          <li><strong>{{ siteData.name }}</strong></li>
+          <li>
+            <a href="/">
+              <img src="/assets/imgs/logo_afa_color_500.png"/>
+            </a>
+          </li>
         </ul>
         <ul>
           <li class="width-wide"><a href="/#contacte">Contacte</a></li>
