--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -44,7 +44,7 @@
     <article>
       <header>
         <h1>
-          {{pageTitle}}
+          {{titol}}
         </h1>
       </header>
       <main>
