--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -22,9 +22,9 @@
         </ul>
         <ul>
           <li class="width-wide"><a href="/">Inici</a></li>
-          <li class="width-wide"><a href="/que-fem">Què fem</a></li>
-          <li class="width-wide"><a href="/qui-som">Qui som</a></li>
-          <li class="width-wide"><a href="/que-es-l-afa">Qué es l'AFA</a></li>
+          <li class="width-wide"><a href="/que-fem/">Què fem</a></li>
+          <li class="width-wide"><a href="/qui-som/">Qui som</a></li>
+          <li class="width-wide"><a href="/que-es-l-afa/">Qué es l'AFA</a></li>
           <li class="width-small">
               <details role="list" dir="rtl">
                   <summary aria-haspopup="listbox">
@@ -32,9 +32,9 @@
                   </summary>
                   <ul role="listbox">
                       <li role="option"><a href="/">Inici</a></li>
-                      <li role="option"><a href="/que-fem">Què fem</a></li>
-                      <li role="option"><a href="/qui-som">Qui som</a></li>
-                      <li role="option"><a href="/que-es-l-afa">Qué es l'AFA</a></li>
+                      <li role="option"><a href="/que-fem/">Què fem</a></li>
+                      <li role="option"><a href="/qui-som/">Qui som</a></li>
+                      <li role="option"><a href="/que-es-l-afa/">Qué es l'AFA</a></li>
                   </ul>
               </details>
           </li>
