--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -7,6 +7,7 @@
     <meta name="version" content="{{versio}}">
     <title>{{ titol or siteData.name }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
     <link rel="stylesheet" href="/assets/afa.css">
   </head>
   <body>
