--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ description | safe | trim }}">
     <meta name="version" content="{{versio}}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+
     <title>{{ titol or siteData.name }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="stylesheet" href="/assets/afa.css">
@@ -16,7 +23,7 @@
         <ul>
           <li>
             <a href="/">
-              <img alt="Logo de l'AFA" src="/assets/imgs/logo_afa_color_500.png"/>
+              <img alt="Logo de l'AFA" src="/assets/imgs/logo_afa_color_500_fons_transparent.png"/>
             </a>
           </li>
         </ul>
