--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -14,7 +14,7 @@
 
     <title>{{ titol or siteData.name }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    <link rel="stylesheet" href="/assets/afa.css">
+    <link rel="stylesheet" href="/assets/css/afa.css">
   </head>
   <body>
     <main class="container">
