--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -68,7 +68,7 @@
         <nav>
           <ul>
             <li>
-              {{ siteData.name }}
+              {{ siteData.name }} | Il·lustració Virginia Lorente per a <a href="https://www.atypicalvalencia.com/">atypicalvalencia.com</a>
             </li>
           </ul>
           <ul>
