Revisió de Carla Mayer

--- a/src/pagines/que-fem.njk
+++ b/src/pagines/que-fem.njk
@@ -8,7 +8,7 @@ actualitzat: 2023-10-11
 versio: 2
 ---
 
-Aquestes son les comissions en les que l'AFA coordina les diferents activitats de l'escola. Per cada comissió teniu un correu de contacte.
+Aquestes són les comissions a través de les quals l'AFA coordina les diferents activitats de l'escola.
 
 
 {% for comissio in comissions %}
