--- a/src/pagines/que-fem.njk
+++ b/src/pagines/que-fem.njk
@@ -8,7 +8,7 @@ actualitzat: 2024-01-29
 versio: 2
 ---
 
-Aquestes són les comissions a través de les quals l'AFA coordina les diferents activitats de l'escola.
+<p>Aquestes són les comissions a través de les quals l'AFA coordina les diferents activitats de l'escola.</p>
 
 
 {% for comissio in comissions %}
