--- a/src/pagines/que-fem.njk
+++ b/src/pagines/que-fem.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/default.njk
 permalink: /que-fem/
-titol: Què fem
+title: Què fem
 description: >
   Llistat de grups de treball i dades de contacte
 actualitzat: 2024-01-29
