--- a/src/pagines/feed.njk
+++ b/src/pagines/feed.njk
@@ -28,7 +28,7 @@
   {%- for post in collections.post | reverse %}
   {%- set absolutePostUrl %}{{ post.url | htmlBaseUrl(metadata.base) }}{% endset %}
   <entry>
-    <title>{{ post.data.titol }}</title>
+    <title>{{ post.data.title }}</title>
     <link href="{{ absolutePostUrl }}" />
     <updated>{{ post.date | dateToRfc3339 }}</updated>
     <id>{{ absolutePostUrl }}</id>
