--- a/src/pagines/noticies.njk
+++ b/src/pagines/noticies.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/default.njk
 permalink: /noticies/
-titol: Notícies
+title: Notícies
 description: >
   Notícies i comunicacions de l'AFA
 ---
@@ -10,7 +10,7 @@ description: >
   <h2>Curs: {{ year }}</h2>
   <ul>
     {% for post in collections.post | reverse  %}
-    <li><a href="{{ post.url }}">{{ post.data.titol }}</a> - {{ post.date | comAMesIDia}}</li>
+    <li><a href="{{ post.url }}">{{ post.data.title }}</a> - {{ post.date | comAMesIDia}}</li>
     {% endfor %}
   </ul>
 {% endfor %}
