--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/assets/css/afa.css">
 
     <link rel="alternate" type="application/atom+xml" href="/feed.xml" />
+    <script data-goatcounter="https://afasantateresa.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 
     <!-- metadata -->
     <meta name="version" content="{{versio}}">
