--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -8,7 +8,10 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <title>{{ title or siteData.name }}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    >
     <link rel="stylesheet" href="/assets/css/afa.css">
 
     <link rel="alternate" type="application/atom+xml" href="/feed.xml" />
